<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.abdu.teha.mycompanytesting03.User.ProductInfo"
    android:orientation="vertical"
    android:background="@color/backgroundColor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/add_product_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/profile_margin">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name2"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/productName"
                    android:textSize="23sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    android:id="@+id/product_name02"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/profile_margin"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/lightGray"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/profile_margin_01">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/price_2"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/productPrice"
                    android:textSize="23sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    android:id="@+id/product_price02"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/profile_margin"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/lightGray"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/profile_margin_01">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/description_2"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/productDesc"
                    android:textSize="23sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    android:id="@+id/product_desc02"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/profile_margin"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/lightGray"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/profile_margin_01">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/companyProductType"
                    android:textSize="23sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    android:id="@+id/product_type02"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/profile_margin"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/lightGray"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/profile_margin_01">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/area"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    android:id="@+id/textView4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_areas"
                    android:textSize="23sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    android:id="@+id/product_area02"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/profile_margin"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/lightGray"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/profile_margin_01">
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/c_name"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/companyName"
                    android:textSize="23sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    android:id="@+id/company_name02"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/profile_margin"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/lightGray"
                    />
            </LinearLayout>



        </LinearLayout>
    </ScrollView>


</LinearLayout>
