<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/company_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    tools:context="com.abdu.teha.mycompanytesting03.User.CompanyInfo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/add_product_margin"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name2"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/companyName"
                    android:textSize="23sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    android:id="@+id/companyName03"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/profile_margin"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/lightGray"
                    />
            </LinearLayout>

           <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
               android:layout_marginTop="@dimen/profile_margin_01"
                >
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email2"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/companyEmail"
                    android:textSize="23sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    android:id="@+id/companyEmail03"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/profile_margin">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/lightGray"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
               android:layout_marginTop="@dimen/profile_margin_01"
                >
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/address2"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/companyAddress"
                    android:textSize="23sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    android:id="@+id/companyAddress03"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/profile_margin">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/lightGray"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
               android:layout_marginTop="@dimen/profile_margin_01"
                >
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/phone2"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/companyPhone"
                    android:textSize="23sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    android:id="@+id/companyPhone03"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/profile_margin">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/lightGray"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
               android:layout_marginTop="@dimen/profile_margin_01"
                >
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/website2"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/companyWebsite"
                    android:textSize="23sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    android:id="@+id/companyWebsite03"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/profile_margin_01">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/lightGray"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
               android:layout_marginTop="@dimen/profile_margin_01"
                >

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/products2"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    android:id="@+id/textView3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/showProducts"
                    android:textSize="23sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    android:id="@+id/showProducts01"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/profile_margin">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/lightGray"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
